--- a/weldx/asdf/schemas/weldx.bam.de/weldx/core/graph/di_graph-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/core/graph/di_graph-1.0.0.yaml
@@ -52,7 +52,9 @@ examples:
 type: object
 properties:
   root_node:
-    tag: "asdf://weldx.bam.de/weldx/tags/core/graph/di_node-1.*"
+    oneOf:
+      - tag: "asdf://weldx.bam.de/weldx/tags/core/graph/di_node-1.*"
+      - tag: "tag:weldx.bam.de:weldx/core/graph/di_node-1.*"
 
 required: [root_node]
 ...
