--- a/weldx/asdf/schemas/weldx.bam.de/weldx/core/time_series-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/core/time_series-1.0.0.yaml
@@ -61,7 +61,9 @@ oneOf:
       expression:
         description: |
           A mathematical expression that describes the time dependent behaviour.
-        tag: "asdf://weldx.bam.de/weldx/tags/core/mathematical_expression-1.*"
+        oneOf:
+          - tag: "asdf://weldx.bam.de/weldx/tags/core/mathematical_expression-1.*"
+          - tag: "tag:weldx.bam.de:weldx/core/mathematical_expression-1.*"
       unit:
         description: |
           Resulting unit of the data when the expression is evaluated.
@@ -79,7 +81,9 @@ oneOf:
       time:
         description: |
           A set of time deltas.
-        tag: "asdf://weldx.bam.de/weldx/tags/time/timedeltaindex-1.*"
+        oneOf:
+          - tag: "asdf://weldx.bam.de/weldx/tags/time/timedeltaindex-1.*"
+          - tag: "tag:weldx.bam.de:weldx/time/timedeltaindex-1.*"
       unit:
         description: |
           Unit of the data.
