--- a/weldx/asdf/schemas/weldx.bam.de/weldx/core/graph/di_edge-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/core/graph/di_edge-1.0.0.yaml
@@ -31,7 +31,9 @@ properties:
     type: string
     enum: [fwd, bwd]
   target_node:
-    tag: "asdf://weldx.bam.de/weldx/tags/core/graph/di_node-1.*"
+    oneOf:
+      - tag: "asdf://weldx.bam.de/weldx/tags/core/graph/di_node-1.*"
+      - tag: "tag:weldx.bam.de:weldx/core/graph/di_node-1.*"
   attributes:
     type: object
 
