--- a/weldx/asdf/schemas/weldx.bam.de/weldx/core/graph/di_node-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/core/graph/di_node-1.0.0.yaml
@@ -39,7 +39,9 @@ properties:
   edges:
     type: array
     items:
-      tag: "asdf://weldx.bam.de/weldx/tags/core/graph/di_edge-1.*"
+      oneOf:
+        - tag: "asdf://weldx.bam.de/weldx/tags/core/graph/di_edge-1.*"
+        - tag: "tag:weldx.bam.de:weldx/core/graph/di_edge-1.*"
   attributes:
     type: object
 
