--- a/weldx/asdf/schemas/weldx.bam.de/weldx/core/transformations/coordinate_system_hierarchy-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/core/transformations/coordinate_system_hierarchy-1.0.0.yaml
@@ -72,7 +72,9 @@ properties:
   reference_time:
     description: |
       A timestamp that serves as reference point for all attached coordinate systems.
-    tag: "asdf://weldx.bam.de/weldx/tags/time/timestamp-1.*"
+    oneOf:
+      - tag: "asdf://weldx.bam.de/weldx/tags/time/timestamp-1.*"
+      - tag: "tag:weldx.bam.de:weldx/time/timestamp-1.*"
 
   subsystem_names:
     description: |
@@ -87,7 +89,9 @@ properties:
       A list containing the data of all subsystems including nested structures.
     type: array
     items:
-      tag: "asdf://weldx.bam.de/weldx/tags/core/transformations/coordinate_system_hierarchy_subsystem-1.*"
+      oneOf:
+        - tag: "asdf://weldx.bam.de/weldx/tags/core/transformations/coordinate_system_hierarchy_subsystem-1.*"
+        - tag: "tag:weldx.bam.de:weldx/core/transformations/coordinate_system_hierarchy_subsystem-1.*"
 
   coordinate_systems:
     description: |
@@ -95,7 +99,9 @@ properties:
       towards their parent system.
     type: array
     items:
-      tag: "asdf://weldx.bam.de/weldx/tags/core/transformations/coordinate_transformation-1.*"
+      oneOf:
+        - tag: "asdf://weldx.bam.de/weldx/tags/core/transformations/coordinate_transformation-1.*"
+        - tag: "tag:weldx.bam.de:weldx/core/transformations/coordinate_transformation-1.*"
 
   spatial_data:
     type: array
@@ -107,7 +113,9 @@ properties:
         name:
           type: string
         data:
-          tag: "asdf://weldx.bam.de/weldx/tags/core/geometry/spatial_data-1.*"
+          oneOf:
+            - tag: "asdf://weldx.bam.de/weldx/tags/core/geometry/spatial_data-1.*"
+            - tag: "tag:weldx.bam.de:weldx/core/geometry/spatial_data-1.*"
       required: [coordinate_system, name, data]
 
 propertyOrder: [name, root_system_name, reference_time, subsystems, subsystem_data, coordinate_systems, spatial_data]
