--- a/weldx/asdf/schemas/weldx.bam.de/weldx/measurement/measurement-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/measurement/measurement-1.0.0.yaml
@@ -13,10 +13,14 @@ properties:
   data:
     type: array
     items:
-      tag: "asdf://weldx.bam.de/weldx/tags/core/time_series-1.*"
+      oneOf:
+        - tag: "asdf://weldx.bam.de/weldx/tags/core/time_series-1.*"
+        - tag: "tag:weldx.bam.de:weldx/core/time_series-1.*"
 
   measurement_chain:
-    tag: "asdf://weldx.bam.de/weldx/tags/measurement/measurement_chain-1.*"
+    oneOf:
+      - tag: "asdf://weldx.bam.de/weldx/tags/measurement/measurement_chain-1.*"
+      - tag: "tag:weldx.bam.de:weldx/measurement/measurement_chain-1.*"
 
 
 propertyOrder: [name, data, measurement_chain]
