--- a/weldx/asdf/schemas/weldx.bam.de/weldx/process/terms-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/process/terms-1.0.0.yaml
@@ -101,49 +101,65 @@ parameters:
   wire_feedrate:
     description: |
       Nominal average wire feedrate.
-    tag: "asdf://weldx.bam.de/weldx/tags/core/time_series-1.*"
+    oneOf:
+      - tag: "asdf://weldx.bam.de/weldx/tags/core/time_series-1.*"
+      - tag: "tag:weldx.bam.de:weldx/core/time_series-1.*"
     wx_unit: "m/s"
 
   voltage:
     description: |
       Nominal target voltage for spray arc processes.
-    tag: "asdf://weldx.bam.de/weldx/tags/core/time_series-1.*"
+    oneOf:
+      - tag: "asdf://weldx.bam.de/weldx/tags/core/time_series-1.*"
+      - tag: "tag:weldx.bam.de:weldx/core/time_series-1.*"
     wx_unit: "V"
 
   pulse_voltage:
     description: |
       Nominal target pulse voltage.
-    tag: "asdf://weldx.bam.de/weldx/tags/core/time_series-1.*"
+    oneOf:
+      - tag: "asdf://weldx.bam.de/weldx/tags/core/time_series-1.*"
+      - tag: "tag:weldx.bam.de:weldx/core/time_series-1.*"
     wx_unit: "V"
 
   pulse_current:
     description: |
       Nominal target pulse current.
-    tag: "asdf://weldx.bam.de/weldx/tags/core/time_series-1.*"
+    oneOf:
+      - tag: "asdf://weldx.bam.de/weldx/tags/core/time_series-1.*"
+      - tag: "tag:weldx.bam.de:weldx/core/time_series-1.*"
     wx_unit: "A"
 
   pulse_duration:
     description: |
       Nominal target pulse duration.
-    tag: "asdf://weldx.bam.de/weldx/tags/core/time_series-1.*"
+    oneOf:
+      - tag: "asdf://weldx.bam.de/weldx/tags/core/time_series-1.*"
+      - tag: "tag:weldx.bam.de:weldx/core/time_series-1.*"
     wx_unit: "s"
 
   pulse_frequency:
     description: |
       Nominal target pulse frequency.
-    tag: "asdf://weldx.bam.de/weldx/tags/core/time_series-1.*"
+    oneOf:
+      - tag: "asdf://weldx.bam.de/weldx/tags/core/time_series-1.*"
+      - tag: "tag:weldx.bam.de:weldx/core/time_series-1.*"
     wx_unit: "Hz"
 
   base_voltage:
     description: |
       Nominal target base voltage.
-    tag: "asdf://weldx.bam.de/weldx/tags/core/time_series-1.*"
+    oneOf:
+      - tag: "asdf://weldx.bam.de/weldx/tags/core/time_series-1.*"
+      - tag: "tag:weldx.bam.de:weldx/core/time_series-1.*"
     wx_unit: "V"
 
   base_current:
     description: |
       Nominal target base current.
-    tag: "asdf://weldx.bam.de/weldx/tags/core/time_series-1.*"
+    oneOf:
+      - tag: "asdf://weldx.bam.de/weldx/tags/core/time_series-1.*"
+      - tag: "tag:weldx.bam.de:weldx/core/time_series-1.*"
     wx_unit: "A"
 
 ...
