--- a/weldx/asdf/schemas/weldx.bam.de/weldx/debug/test_shape_validator-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/debug/test_shape_validator-1.0.0.yaml
@@ -51,7 +51,9 @@ properties:
   time_prop:
     oneOf:
       - tag: "asdf://weldx.bam.de/weldx/tags/time/timedeltaindex-1.0.0"
+      - tag: "tag:weldx.bam.de:weldx/time/timedeltaindex-1.0.0"
       - tag: "asdf://weldx.bam.de/weldx/tags/time/datetimeindex-1.0.0"
+      - tag: "tag:weldx.bam.de:weldx/time/datetimeindex-1.0.0"
 
   optional_prop:
     tag: "tag:stsci.edu:asdf/core/ndarray-1.*"
