--- a/weldx/asdf/schemas/weldx.bam.de/weldx/aws/design/weld_details-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/aws/design/weld_details-1.0.0.yaml
@@ -14,8 +14,8 @@ properties:
     description: |
       AWS 3.0, p. 19 : "Detailed Description of mating configuration of two components, sufficient information for shop preparation of the components." TODO CLASS
     oneOf:
-      - tag: "asdf://weldx.bam.de/weldx/tags/groove/iso_9692_1_2013_12/VGroove-1.0.0"
-      - tag: "asdf://weldx.bam.de/weldx/tags/groove/iso_9692_1_2013_12/UGroove-1.0.0"
+      - tag: "asdf://weldx.bam.de/weldx/tags/groove/**-1.*"
+      - tag: "tag:weldx.bam.de:weldx/groove/**-1.*"
 
   weld_sizes:
     description: |
