--- a/weldx/asdf/schemas/weldx.bam.de/weldx/time/time-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/time/time-1.0.0.yaml
@@ -48,9 +48,13 @@ properties:
     type: object
     oneOf:
       - tag: "asdf://weldx.bam.de/weldx/tags/time/timedelta-1.*"
+      - tag: "tag:weldx.bam.de:weldx/time/timedelta-1.*"
       - tag: "asdf://weldx.bam.de/weldx/tags/time/timedeltaindex-1.*"
+      - tag: "tag:weldx.bam.de:weldx/time/timedeltaindex-1.*"
       - tag: "asdf://weldx.bam.de/weldx/tags/time/timestamp-1.*"
+      - tag: "tag:weldx.bam.de:weldx/time/timestamp-1.*"
       - tag: "asdf://weldx.bam.de/weldx/tags/time/datetimeindex-1.*"
+      - tag: "tag:weldx.bam.de:weldx/time/datetimeindex-1.*"
 
   reference_time:
     description: |
