--- a/weldx/asdf/schemas/weldx.bam.de/weldx/aws/design/weld_details-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/aws/design/weld_details-1.0.0.yaml
@@ -15,7 +15,7 @@ properties:
       AWS 3.0, p. 19 : "Detailed Description of mating configuration of two components, sufficient information for shop preparation of the components." TODO CLASS
     oneOf:
       - tag: "asdf://weldx.bam.de/weldx/tags/groove/**-1.*"
-      - tag: "tag:weldx.bam.de:weldx/groove/**-1.*"
+      - tag: "tag:weldx.bam.de:weldx/groove/**-1.*" # legacy_tag
 
   weld_sizes:
     description: |
