--- a/weldx/asdf/schemas/weldx.bam.de/weldx/core/data_array-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/core/data_array-1.0.0.yaml
@@ -23,13 +23,13 @@ properties:
     items:
       oneOf:
         - tag: "asdf://weldx.bam.de/weldx/tags/core/variable-1.*"
-        - tag: "tag:weldx.bam.de:weldx/core/variable-1.*"
+        - tag: "tag:weldx.bam.de:weldx/core/variable-1.*" # legacy_tag
   data:
     description: |
       The actual data.
     oneOf:
       - tag: "asdf://weldx.bam.de/weldx/tags/core/variable-1.*"
-      - tag: "tag:weldx.bam.de:weldx/core/variable-1.*"
+      - tag: "tag:weldx.bam.de:weldx/core/variable-1.*" # legacy_tag
 
 required: [attributes, coordinates, data]
 propertyOrder: [attributes, coordinates, data]
