--- a/weldx/asdf/schemas/weldx.bam.de/weldx/core/graph/di_graph-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/core/graph/di_graph-1.0.0.yaml
@@ -54,7 +54,7 @@ properties:
   root_node:
     oneOf:
       - tag: "asdf://weldx.bam.de/weldx/tags/core/graph/di_node-1.*"
-      - tag: "tag:weldx.bam.de:weldx/core/graph/di_node-1.*"
+      - tag: "tag:weldx.bam.de:weldx/core/graph/di_node-1.*" # legacy_tag
 
 required: [root_node]
 ...
