--- a/weldx/asdf/schemas/weldx.bam.de/weldx/core/graph/di_node-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/core/graph/di_node-1.0.0.yaml
@@ -41,7 +41,7 @@ properties:
     items:
       oneOf:
         - tag: "asdf://weldx.bam.de/weldx/tags/core/graph/di_edge-1.*"
-        - tag: "tag:weldx.bam.de:weldx/core/graph/di_edge-1.*"
+        - tag: "tag:weldx.bam.de:weldx/core/graph/di_edge-1.*" # legacy_tag
   attributes:
     type: object
 
