--- a/weldx/asdf/schemas/weldx.bam.de/weldx/core/transformations/coordinate_system_hierarchy-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/core/transformations/coordinate_system_hierarchy-1.0.0.yaml
@@ -74,7 +74,7 @@ properties:
       A timestamp that serves as reference point for all attached coordinate systems.
     oneOf:
       - tag: "asdf://weldx.bam.de/weldx/tags/time/timestamp-1.*"
-      - tag: "tag:weldx.bam.de:weldx/time/timestamp-1.*"
+      - tag: "tag:weldx.bam.de:weldx/time/timestamp-1.*" # legacy_tag
 
   subsystem_names:
     description: |
@@ -91,7 +91,7 @@ properties:
     items:
       oneOf:
         - tag: "asdf://weldx.bam.de/weldx/tags/core/transformations/coordinate_system_hierarchy_subsystem-1.*"
-        - tag: "tag:weldx.bam.de:weldx/core/transformations/coordinate_system_hierarchy_subsystem-1.*"
+        - tag: "tag:weldx.bam.de:weldx/core/transformations/coordinate_system_hierarchy_subsystem-1.*" # legacy_tag
 
   coordinate_systems:
     description: |
@@ -101,7 +101,7 @@ properties:
     items:
       oneOf:
         - tag: "asdf://weldx.bam.de/weldx/tags/core/transformations/coordinate_transformation-1.*"
-        - tag: "tag:weldx.bam.de:weldx/core/transformations/coordinate_transformation-1.*"
+        - tag: "tag:weldx.bam.de:weldx/core/transformations/coordinate_transformation-1.*" # legacy_tag
 
   spatial_data:
     type: array
@@ -115,7 +115,7 @@ properties:
         data:
           oneOf:
             - tag: "asdf://weldx.bam.de/weldx/tags/core/geometry/spatial_data-1.*"
-            - tag: "tag:weldx.bam.de:weldx/core/geometry/spatial_data-1.*"
+            - tag: "tag:weldx.bam.de:weldx/core/geometry/spatial_data-1.*" # legacy_tag
       required: [coordinate_system, name, data]
 
 propertyOrder: [name, root_system_name, reference_time, subsystems, subsystem_data, coordinate_systems, spatial_data]
