--- a/weldx/asdf/schemas/weldx.bam.de/weldx/core/transformations/coordinate_system_hierarchy_subsystem-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/core/transformations/coordinate_system_hierarchy_subsystem-1.0.0.yaml
@@ -37,7 +37,7 @@ properties:
       A timestamp that serves as reference point for all attached coordinate systems.
     oneOf:
       - tag: "asdf://weldx.bam.de/weldx/tags/time/timestamp-1.*"
-      - tag: "tag:weldx.bam.de:weldx/time/timestamp-1.*"
+      - tag: "tag:weldx.bam.de:weldx/time/timestamp-1.*" # legacy_tag
 
   root_cs:
     description: |
