--- a/weldx/asdf/schemas/weldx.bam.de/weldx/equipment/measurement_equipment-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/equipment/measurement_equipment-1.0.0.yaml
@@ -38,13 +38,13 @@ properties:
     items:
       oneOf:
         - tag: "asdf://weldx.bam.de/weldx/tags/measurement/source-1.*"
-        - tag: "tag:weldx.bam.de:weldx/measurement/source-1.*"
+        - tag: "tag:weldx.bam.de:weldx/measurement/source-1.*" # legacy_tag
   transformations:
     type: array
     items:
       oneOf:
         - tag: "asdf://weldx.bam.de/weldx/tags/measurement/signal_transformation-1.*"
-        - tag: "tag:weldx.bam.de:weldx/measurement/signal_transformation-1.*"
+        - tag: "tag:weldx.bam.de:weldx/measurement/signal_transformation-1.*" # legacy_tag
 
 propertyOrder: [name, sources, transformations]
 required: [name]
