--- a/weldx/asdf/schemas/weldx.bam.de/weldx/measurement/measurement-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/measurement/measurement-1.0.0.yaml
@@ -15,12 +15,12 @@ properties:
     items:
       oneOf:
         - tag: "asdf://weldx.bam.de/weldx/tags/core/time_series-1.*"
-        - tag: "tag:weldx.bam.de:weldx/core/time_series-1.*"
+        - tag: "tag:weldx.bam.de:weldx/core/time_series-1.*" # legacy_tag
 
   measurement_chain:
     oneOf:
       - tag: "asdf://weldx.bam.de/weldx/tags/measurement/measurement_chain-1.*"
-      - tag: "tag:weldx.bam.de:weldx/measurement/measurement_chain-1.*"
+      - tag: "tag:weldx.bam.de:weldx/measurement/measurement_chain-1.*" # legacy_tag
 
 
 propertyOrder: [name, data, measurement_chain]
