--- a/weldx/asdf/schemas/weldx.bam.de/weldx/measurement/source-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/measurement/source-1.0.0.yaml
@@ -30,13 +30,13 @@ properties:
       The signal that is produced by the source.
     oneOf:
       - tag: "asdf://weldx.bam.de/weldx/tags/measurement/signal-1.*"
-      - tag: "tag:weldx.bam.de:weldx/measurement/signal-1.*"
+      - tag: "tag:weldx.bam.de:weldx/measurement/signal-1.*" # legacy_tag
   error:
     description: |
       The error of the source.
     oneOf:
       - tag: "asdf://weldx.bam.de/weldx/tags/measurement/error-1.*"
-      - tag: "tag:weldx.bam.de:weldx/measurement/error-1.*"
+      - tag: "tag:weldx.bam.de:weldx/measurement/error-1.*" # legacy_tag
 
 required: [name, output_signal]
 propertyOrder: [name, output_signal, error]
