remove legacy entry points

--- a/setup.cfg
+++ b/setup.cfg
@@ -66,9 +66,7 @@ test =
 
 [options.entry_points]
 asdf_extensions =
-    weldx = weldx.asdf._extension:WeldxExtension
-    weldx-asdf = weldx.asdf._extension:WeldxAsdfExtension
-    weldx-api = weldx.asdf.extension:get_extensions
+    weldx = weldx.asdf.extension:get_extensions
 
 console_scripts =
     welding_schema = weldx.asdf.cli.welding_schema:main
