--- a/.github/workflows/pytest_asdf.yml
+++ b/.github/workflows/pytest_asdf.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-18.04]
+        os: [ubuntu-latest]
         py: ['3.8']
     steps:
       - uses: actions/checkout@v2
@@ -20,3 +20,28 @@ jobs:
       - name: run asdf schema pytest
         run: |
           pytest --asdf-tests --ignore=weldx/tests/ --no-cov weldx/asdf/schemas/
+
+  validate_manifest:
+    name: validate
+      runs-on: ubuntu-latest
+      steps:
+        - uses: actions/checkout@v2
+        - uses: actions/setup-python@v2
+          with:
+            python-version: '3.8'
+        - name: pip installs
+          run: |
+            python -m pip install git+https://github.com/asdf-format/asdf.git
+        - uses: jannekem/run-python-script-action@v1
+            with:
+              script: |
+                from pathlib import Path
+                import asdf
+                import yaml
+                schema = asdf.schema.load_schema(
+                    "asdf://asdf-format.org/core/schemas/extension_manifest-1.0.0"
+                )
+                manifest = yaml.safe_load(
+                    open(Path("./weldx/asdf/manifests/weldx_manifest-1.0.0.yaml")).read()
+                )
+                asdf.schema.validate(manifest, schema=schema)
