--- a/.github/workflows/pytest_asdf.yml
+++ b/.github/workflows/pytest_asdf.yml
@@ -22,7 +22,7 @@ jobs:
           pytest --asdf-tests --ignore=weldx/tests/ --no-cov weldx/asdf/schemas/
 
   validate_manifest:
-    name: validate
+    name: validate weldx manifest
       runs-on: ubuntu-latest
       steps:
         - uses: actions/checkout@v2
@@ -33,15 +33,15 @@ jobs:
           run: |
             python -m pip install git+https://github.com/asdf-format/asdf.git
         - uses: jannekem/run-python-script-action@v1
-            with:
-              script: |
-                from pathlib import Path
-                import asdf
-                import yaml
-                schema = asdf.schema.load_schema(
-                    "asdf://asdf-format.org/core/schemas/extension_manifest-1.0.0"
-                )
-                manifest = yaml.safe_load(
-                    open(Path("./weldx/asdf/manifests/weldx_manifest-1.0.0.yaml")).read()
-                )
-                asdf.schema.validate(manifest, schema=schema)
+          with:
+            script: |
+              from pathlib import Path
+              import asdf
+              import yaml
+              schema = asdf.schema.load_schema(
+                  "asdf://asdf-format.org/core/schemas/extension_manifest-1.0.0"
+              )
+              manifest = yaml.safe_load(
+                  open(Path("./weldx/asdf/manifests/weldx_manifest-1.0.0.yaml")).read()
+              )
+              asdf.schema.validate(manifest, schema=schema)
