add schema resource mappings and install via entry point

--- a/setup.cfg
+++ b/setup.cfg
@@ -65,8 +65,10 @@ test =
     nbval
 
 [options.entry_points]
-asdf_extensions =
+asdf.extensions =
     weldx = weldx.asdf.extension:get_extensions
+asdf.resource_mappings =
+    weldx_schemas = weldx.asdf.extension:get_resource_mappings
 
 console_scripts =
     welding_schema = weldx.asdf.cli.welding_schema:main
