--- a/setup.cfg
+++ b/setup.cfg
@@ -67,6 +67,8 @@ test =
 #     weldx = weldx.asdf.extension:get_extensions
 # asdf.resource_mappings =
 #     weldx_schemas = weldx.asdf.extension:get_resource_mappings
+asdf_extensions =
+    weldx_validators = weldx.asdf._extension:WeldxExtension
 console_scripts =
     welding_schema = weldx.asdf.cli.welding_schema:main
 
