remove calls to legacy extensions

--- a/setup.cfg
+++ b/setup.cfg
@@ -68,7 +68,7 @@ test =
 # asdf.resource_mappings =
 #     weldx_schemas = weldx.asdf.extension:get_resource_mappings
 asdf_extensions =
-    weldx_validators = weldx.asdf._extension:WeldxExtension
+    weldx_validators = weldx.asdf._extension:WeldxLegacyExtension
 console_scripts =
     welding_schema = weldx.asdf.cli.welding_schema:main
 
