--- a/setup.cfg
+++ b/setup.cfg
@@ -63,10 +63,10 @@ test =
     nbval
 
 [options.entry_points]
-# asdf.extensions =
-#     weldx = weldx.asdf.extension:get_extensions
-# asdf.resource_mappings =
-#     weldx_schemas = weldx.asdf.extension:get_resource_mappings
+asdf.extensions =
+    weldx = weldx.asdf.extension:get_extensions
+asdf.resource_mappings =
+    weldx_schemas = weldx.asdf.extension:get_resource_mappings
 asdf_extensions =
     weldx_validators = weldx.asdf._extension:WeldxLegacyExtension
 console_scripts =
