refactor single_pass_weld-1.0.0.schema.yaml to single_pass_weld-1.0.0.yaml

--- a/setup.cfg
+++ b/setup.cfg
@@ -95,7 +95,7 @@ match = (?!__)(?!_version)(?!conftest).*\.py
 match_dir = [^\.][^\docs].*
 
 [tool:pytest]
-addopts = --tb=short --color=yes -rs --cov=weldx --cov-report=term-missing:skip-covered --doctest-modules
+addopts = --tb=short --color=yes -rsw --cov=weldx --cov-report=term-missing:skip-covered --doctest-modules
 #addopts = --tb=short --color=yes -rs -p no:cov
 testpaths =
     weldx
@@ -104,8 +104,8 @@ markers =
     slow: marks tests as slow to run (skipped by default, enable with --runslow option)
 asdf_schema_root = weldx/asdf/schemas
 #asdf_schema_tests_enabled = true
-asdf_schema_skip_tests =
-    weldx.bam.de/weldx/datamodels/single_pass_weld-1.0.0.schema.yaml
+#asdf_schema_skip_tests =
+#    weldx.bam.de/weldx/datamodels/single_pass_weld-1.0.0.schema.yaml
 norecursedirs = doc
 
 [isort]
